1999-05-27  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* libsh/tregexp.c, libsh/interpret.c:
	    A bit less copying around, and way smaller initial malloc
	    to avoid need for big memory blocks, which don't seem to be
	    available for latter reuse -- memory fragments, you see..

	* configure.in:
	    Improve a bit of the testing of  <db_185.h> vs. <db.h>,
	    and  -ldb1  vs.  -ldb  -- perhaps this is glibc 2.1 systems
	    thing only, perhaps this is more common, don't know..

	* utils/vacation/Makefile.in:
	    When installing under a prefix, create  $(prefix)$(VACATIONDIR)
	    in case it doesn't exist before storing anything into it.
	    Also corrected the installed symlink a bit.

	* transports/smtp/smtp.c:
	    One semi-obscure bug in pipelining related smtp_sync() code
	    yielding false positive delivery report, if the remote did
	    support CHUNKING, and the message was sufficiently small,
	    and the remote closed session before replying to MAIL/RCPT*/BDAT
	    sequence completely...
	    ( read: "small" = under 64 kB, which means almoast all emails ... )

1999-05-26  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/readconfig.c, scheduler/transport.c:
	    Reworked the handling of   command="..."  tags in the
	    scheduler.conf  file.  Now it handles properly the initial
	    literal environment variable settings.

	* smtpserver/smtpserver.c, scheduler/scheduler.c,
	  include/libz.h, lib/killprev.c:
	    Remove the PIDFILE when the server goes away.
	    (This isn't perfect method, but let it be..)

	* router/functions.c:
	    Created router function:  stableprocess <filename>
	    which is a wrapper on process.cf defined process() with
	    cleanup of gensym generated symbols. (Work In Progress;
	    part of my ideas to completely rework router queue...)

	* router/db.c:
	    Modify cache definitions -- zero them at the local db's

	* router/rfc822.c, transports/libta/ctlopen.c:
	    Apeace Solaris 2.6 / gcc 2.7.2.3 "-O2 -Wall" compilation
